[package]
name = "server_users"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Holland"]
description = "A terminal-based SSH server monitoring tool that displays real-time CPU and RAM usage per user on remote servers"
license = "GPL-3.0-or-later"
repository = "https://github.com/0thomasholland/server-users"
homepage = "https://github.com/0thomasholland/server-users"
readme = "README.md"
keywords = ["ssh", "monitoring", "terminal", "server", "tui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
ssh2 = "0.9"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
